--- a/Cadatro_Login/style.css
+++ b/Cadatro_Login/style.css
@@ -40,7 +40,7 @@ body {
 
 .animacaoLoading::before {
   content: "";
-  background-image: url(./assets/logoTipos/kanbanHub.svg);
+  background-image: url(../assets/logoTipos/kanbanHub.svg);
   width: 8rem;
   height: 8rem;
   background-size: cover;
