--- a/Pagina_Kanban/style.css
+++ b/Pagina_Kanban/style.css
@@ -289,9 +289,12 @@ body {
   background-color: white;
   box-shadow: 0px 0px 2px 2px rgb(33, 48, 40);
   display: flex;
+
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   gap: 2vh;
-  width: 25rem;
+  width: 28rem;
   border-radius: 1vh;
   padding: 1rem 2rem;
   animation: surgirFormulario 1s ;
@@ -327,8 +330,15 @@ body {
   margin-bottom: 1rem;
 }
 
+.containerStatusTasks{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2vh;
+}
+
 #statusTask {
-  width: 40%;
+  width: 45%;
   padding: 0.5rem 0.5rem;
   border-radius: 0.4rem;
   background-color: black;
