--- a/Pagina_Kanban/style.css
+++ b/Pagina_Kanban/style.css
@@ -147,7 +147,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   z-index: 0;
 }
 
@@ -169,6 +168,8 @@ body {
   border-bottom-right-radius: 1vh;
   overflow-y: scroll;
   position: relative;
+  overflow-x: hidden;
+  padding: 0 1rem;
 }
 
 .task-item {
@@ -181,6 +182,8 @@ body {
   color: rgb(27, 26, 26);
   background-color: rgba(236, 233, 228, 0.747);
   position: relative;
+  width: 100%;
+  text-align: justify;
 }
 
 .task-item:nth-child(odd) {
