adicionado botão de edit

--- a/Pagina_Kanban/media.css
+++ b/Pagina_Kanban/media.css
@@ -24,3 +24,10 @@
         width: 100%;
     }
 }
+
+@media (max-width: 1000px) {
+    .container {
+        margin: 2vh;
+        gap: 3vh;
+    }
+}
