--- a/Pagina_Kanban/style.css
+++ b/Pagina_Kanban/style.css
@@ -11,7 +11,6 @@ body {
   background-color: white;
 }
 
-
 .animacaoLoading {
   width: 100vw;
   height: 100vh;
@@ -66,6 +65,10 @@ body {
   }
 }
 
+#containerAllTasks {
+  animation: animacaoSurgir 1.5s;
+}
+
 
 .nav_Bar {
   display: flex;
@@ -75,6 +78,7 @@ body {
   z-index: 0;
   background-color: black;
   min-height: 3.5rem;
+  width: 100%;
 }
 
 .title_Primary {
@@ -279,20 +283,28 @@ body {
 
 #containerForms {
   width: 100vw;
-  height: 90.9vh;
-  position: absolute;
+  height: 100vh;
+  position: fixed;
   display: none;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.548);
   z-index: 1;
+  margin-top: -7.4vh;
+}
+
+#containerEntries {
+  display: none;
+}
+
+#editTasksForm {
+  display: none;
 }
 
 .containerEntriesData {
   background-color: white;
   box-shadow: 0px 0px 2px 2px rgb(33, 48, 40);
   display: flex;
-
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -323,7 +335,7 @@ body {
   z-index: 0;
 }
 
-.containerEntriesData input:not(#term) {
+.containerEntriesData input:not(.term) {
   background: none;
   padding: 0.5vh;
   width: 100%;
@@ -340,7 +352,7 @@ body {
   gap: 2vh;
 }
 
-#statusTask {
+.statusTask {
   width: 45%;
   padding: 0.5rem 0.5rem;
   border-radius: 0.4rem;
@@ -351,7 +363,7 @@ body {
 }
 
 
-.containerEntriesData #term {
+.containerEntriesData .term {
   color: rgb(7, 4, 4);
   background-color: rgba(255, 255, 255, 0);
   outline: none;
