--- a/Pagina_Kanban/style.css
+++ b/Pagina_Kanban/style.css
@@ -171,6 +171,7 @@ h2 {
 
 .listTasks {
   width: 100%;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
