Funcionalidade de mover tarefas finalizado

--- a/Pagina_Kanban/style.css
+++ b/Pagina_Kanban/style.css
@@ -170,6 +170,7 @@ h2 {
 
 .listTasks {
   width: 100%;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
