--- a/Pagina_Kanban/style.css
+++ b/Pagina_Kanban/style.css
@@ -80,12 +80,30 @@ h2 {
 .nav_Bar {
   display: flex;
   align-items: center;
-  justify-content: start;
-  padding-left: 2rem;
+  justify-content: space-between;
+  padding: 0 2rem;
   z-index: 0;
   background-color: black;
   min-height: 3.5rem;
   width: 100%;
+}
+
+#logout {
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+  border: none;
+  background: none;
+  transition: transform .2s ease-in-out;
+}
+
+#logout > img {
+  width: 100%;
+  height: 100%;
+}
+
+#logout:hover {
+  transform: scale(1.25);
 }
 
 .title_Primary {
